cloudfoundry-attic/login-server:original code